# branchpro

./: .coveragerc  .gitignore  .readthedocs.yaml  .requirements-docs.txt  ACT.csv  CITATION.cff  LICENSE.md  MANIFEST.in  NSW.csv  Procfile  QLD.csv  README.md  VIC.csv  WA.csv  index.html  pyproject.toml  requirements-setup.txt  requirements.txt  run-tests.py  setup.py  si-epinow.csv
.github/workflows/: check-copyright.yml  coverage-test.yml  doctest.yml  flake8-style-test.yml  macos-unittests.yml  os-unittests.yml  python-version-unittests.yml  ubuntu-unittests.yml  windows-unittests.yml
Procfile_inference/: Procfile
Procfile_simulation/: Procfile
branchpro/: __init__.py  _dataset_library_api.py  _incidence_number_plot.py  _sliders.py  dummy.py  fast_posterior.c  figures.py  models.py  multicat_models.py  multicat_posterior.py  negbin_models.py  negbin_posterior.py  new_models.py  new_posterior.py  poibin_models.py  poisson.py  posterior.py  simulation.py  version_info.py  visualisation.py
branchpro/apps/: __init__.py  _dash_app.py  _incidence_number_plot.py  _inference.py  _simulation.py  app.py  (+6 more)
cache/: cache.db  cache.db-shm  cache.db-wal
docs/: .readthedocs.yaml
examples/: README.md  Rt-inference.ipynb  Rt-inference_multicat copy 2.ipynb  Rt-inference_multicat copy.ipynb  Rt-inference_multicat.ipynb  Rt-inference_neg_bin.ipynb  Rt-inference_poibin.ipynb  branchpro-forward-simulation.ipynb  local-imported-Rt-inference.ipynb  local-imported-Rt-inference_multicat.ipynb  local-imported-Rt-inference_neg_bin.ipynb  poisson.stan  synthetic-data-notebook.ipynb
(+153 files in other folders)
